# test870d1822-a0e2-4ef0-b560-efbea3ff636e

./: .env.example  README.md  pyproject.toml  schema.prisma
project/: create_user_service.py  get_user_activity_service.py  interpret_emoji_service.py  login_user_service.py  logout_user_service.py  server.py  update_user_service.py
